<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/camera_ui_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:gravity="bottom|center"
    android:orientation="vertical">

    <!-- Camera control and gallery buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cameraZoomText0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/zoom_button_corners"
            android:gravity="center"
            android:padding="12dp"
            android:text="0x"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cameraZoomText05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/zoom_button_corners"
            android:gravity="center"
            android:padding="12dp"
            android:text="0.5x"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cameraZoomText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/zoom_button_corners"
            android:gravity="center"
            android:padding="12dp"
            android:text="1x"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/photo_view_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/gallery_button_alt"
            android:padding="@dimen/spacing_large"
            app:srcCompat="@drawable/ic_photo" />

        <!--        android:background="@drawable/zoom_button_corners"-->
        <!--        android:src="@drawable/ic_shutter"-->
        <ImageButton
            android:id="@+id/camera_capture_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_gravity="bottom|center"
            android:contentDescription="@string/capture_button_alt"
            android:src="@drawable/ic_shutter" />

        <!--        android:background="@android:color/transparent"-->
        <TextView
            android:id="@+id/saveText"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:contentDescription="@string/switch_camera_button_alt"
            android:padding="@dimen/spacing_small"
            android:text="Save" />
    </LinearLayout>

</LinearLayout>