<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/cancel_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/txBlack"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textColor="@color/ic_white"
            android:textSize="14sp"
            android:translationX="13dp"
            android:translationY="19dp" />

        <ImageView
            android:id="@+id/dualCamera"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center_vertical|right"
            android:layout_toStartOf="@+id/flashLight"
            android:background="@drawable/ic_switch_camera"
            android:translationY="3dp" />

        <ImageView
            android:id="@+id/flashLight"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:background="@drawable/flash_circle_1" />

    </RelativeLayout>

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/ic_white"
        android:translationY="65dp"
        app:layout_constraintBottom_toTopOf="@+id/switchCameraLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_layout" />

    <CheckBox
        android:id="@+id/audio_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:buttonTint="@color/ic_white"
        android:text="@string/audio"
        android:textColor="@color/txWhite"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/previewView"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <LinearLayout
        android:id="@+id/switchCameraLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/txBlack"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/videoControlView"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/photoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:background="@color/black_overlay"
            android:clickable="true"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:text="@string/photo"
            android:textAllCaps="true"
            android:textColor="@color/txWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="KeyboardInaccessibleWidget" />

        <TextView
            android:id="@+id/videoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:background="@drawable/phone_photo_text_bg"
            android:clickable="true"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:text="@string/video"
            android:textAllCaps="true"
            android:textColor="@color/txWhite"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="KeyboardInaccessibleWidget" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/cameraZoom"
        android:layout_width="75dp"
        android:layout_height="32dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/zoom_button_corners"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/switchCameraLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/zoomToggleBg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="1dp"
            android:background="@drawable/zoom_button_bg" />

        <TextView
            android:id="@+id/tvZoomOne"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="1dp"
            android:foreground="#00555555"
            android:gravity="center"
            android:text="1x"
            android:textAllCaps="false"
            android:textColor="@color/txBlack"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvZoomTwo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="1dp"
            android:background="#00555555"
            android:foreground="#00555555"
            android:gravity="center"
            android:text="2x"
            android:textAllCaps="false"
            android:textColor="@color/txWhite"
            android:textSize="12sp" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quality_selection"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerVertical="false"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:choiceMode="singleChoice"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/videoControlView"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/audio_selection" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/videoControlView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/txBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/video_preview_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="44dp"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/camera"
            android:outlineProvider="background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/captureButtonFrame"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <FrameLayout
            android:id="@+id/captureButtonFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/video_capture_gradient_bg" />

            <ImageButton
                android:id="@+id/capture_button"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_gravity="center"
                android:background="@drawable/video_capture_bg"
                android:contentDescription="@string/capture"
                tools:ignore="ImageContrastCheck" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recordLayout"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="@drawable/video_rec_bg"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/pause_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/baseline_pause_24"
                android:contentDescription="@string/pause"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/stop_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/baseline_stop_24"
                android:contentDescription="@string/stop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/saveText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="44dp"
            android:background="@drawable/bg_save_text"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/txWhite"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/captureButtonFrame"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/capture_status"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_video_capture_bg"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/txWhite"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <FrameLayout
        android:id="@+id/place_holder_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/txBlack"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/place_holder_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/outline_videocam_24" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
